--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "**Distributed Real-Time Messaging Engine**",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node-dev --respawn src/server.ts",
+    "build": "tsc",
+    "start": "node build/server.js",
+    "migrate": "ts-node migrations/migrate.ts"
   },
   "keywords": [],
   "author": "",
